--- a/DayDayUp/Styles/Fonts.xaml
+++ b/DayDayUp/Styles/Fonts.xaml
@@ -2,9 +2,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <x:Double x:Key="LargeFontSize">24</x:Double>
-    <x:Double x:Key="MediumFontSize">16</x:Double>
-    
     <Style x:Key="TitleTextStyle"
            TargetType="TextBlock"
            BasedOn="{StaticResource TitleTextBlockStyle}">
@@ -42,6 +39,14 @@
                 Value="24" />
     </Style>
     
+    <Style x:Key="SmallTextStyle"
+           TargetType="TextBlock"
+           BasedOn="{StaticResource CaptionTextBlockStyle}">
+        <Setter Property="FontSize"
+                Value="12" />
+        <Setter Property="Foreground"
+                Value="Gray" />
+    </Style>
 
     <Style x:Key="CopyrightTextStyle" TargetType="TextBlock" BasedOn="{StaticResource BaseTextBlockStyle}">
         <Setter Property="FontWeight" Value="Normal"/>
